# XAG-Network-Optimizer-for-Efficient-Quantum-Circuits

./: CMakeLists.txt  README.md  requirements.txt
Optimised XAG Networks and Analysis/0x0000000000006996/: circuits.ipynb  i1.qasm  i2.qasm  i4.qasm
Optimised XAG Networks and Analysis/0x0000000000006996/.ipynb_checkpoints/: circuits-checkpoint.ipynb
Optimised XAG Networks and Analysis/0x0000000056a9a956/: circuits.ipynb  i1.qasm  i2.qasm  i4.qasm
Optimised XAG Networks and Analysis/0x0000000096969669/: circuits.ipynb  i1.qasm  i2.qasm  i3.qasm
Optimised XAG Networks and Analysis/0x0000000099966669/: circuits.ipynb  i1.qasm  i2.qasm  i3.qasm
Optimised XAG Networks and Analysis/0x0000000099966669/.ipynb_checkpoints/: circuits-checkpoint.ipynb
Optimised XAG Networks and Analysis/0x00000000ffff9669/: circuits.ipynb  i1.qasm  i2.qasm  i3.qasm
Optimised XAG Networks and Analysis/0x00000000ffff9669/.ipynb_checkpoints/: circuits-checkpoint.ipynb
Optimised XAG Networks and Analysis/0x2882822882282882/: circuits.ipynb  i1.qasm  i2.qasm  i3.qasm
Optimised XAG Networks and Analysis/0x2882822882282882/.ipynb_checkpoints/: circuits-checkpoint.ipynb
Optimised XAG Networks and Analysis/0x56a9a956a95656a9/: i1.qasm
Optimised XAG Networks and Analysis/0x6969699600000000/: circuits.ipynb  i1.qasm  i2.qasm  i4.qasm
Optimised XAG Networks and Analysis/0x6969699696969669/: circuits.ipynb  i1.qasm  i2.qasm  i3.qasm
Optimised XAG Networks and Analysis/0x6996699669969669/: circuits.ipynb  i1.qasm  i2.qasm  i4.qasm
Optimised XAG Networks and Analysis/0x96665aaa3cccf000/: circuits.ipynb  i1.qasm  i2.qasm  i4.qasm
Optimised XAG Networks and Analysis/0x9996666966699996/: i1.qasm  i2.qasm  i5.qasm
Optimised XAG Networks and Analysis/0x9996666966699996/.ipynb_checkpoints/: circuits-checkpoint.ipynb
Optimised XAG Networks and Analysis/0xa95656a900000000/: circuits.ipynb  i1.qasm  i2.qasm  i4.qasm
Optimised XAG Networks and Analysis/0xa95656a956a9a956/: circuits.ipynb  i2.qasm  i3.qasm
Optimised XAG Networks and Analysis/0xa95656a956a9a956/.ipynb_checkpoints/: circuits-checkpoint.ipynb
Optimised XAG Networks and Analysis/0xfdfdfd54020202ab/: circuits.ipynb  i1.qasm  i2.qasm  i4.qasm
Optimised XAG Networks and Analysis/0xffff00006665999a/: circuits.ipynb  i1.qasm  i5.qasm
Optimised XAG Networks and Analysis/0xffff00006665999a/.ipynb_checkpoints/: circuits-checkpoint.ipynb
experiments/: CMakeLists.txt  cost_generic_resub.cpp  exact_mc_synthesis.cpp  exact_mc_synthesis.json  lut_mapper.json  lut_mapping.json  mapper.json  node_resynthesis.json  qsp_cuts.json  qsp_file.cpp  rewrite.json  sop_balancing.json  uqsp.json  xag_optimizer.cpp
include/: CMakeLists.txt
include/caterpillar/solvers/: z3_inplace_solver.hpp  z3_solver.hpp
include/caterpillar/synthesis/: lhrs.hpp
include/include/cudd/cudd/: cuddInt.h
include/mockturtle/: mockturtle.hpp
include/mockturtle/algorithms/: exact_mc_synthesis.hpp  reconv_cut.hpp
include/mockturtle/io/: write_verilog.hpp
include/tweedledum/io/: qasm.hpp
include/tweedledum/networks/: netlist.hpp
lib/: CMakeLists.txt
lib/angel/angel/quantum_circuit/: create_quantum_circuit.hpp
lib/angel/angel/quantum_state_preparation/: common_bdd.hpp  qsp_bdd.hpp
lib/angel/angel/utils/: function_extractor.hpp
lib/bill/bill/sat/solver/: glucose.hpp  maple.hpp
lib/easy/easy/sat2/: sat_solver.hpp
lib/glucose/glucose/: glucose.hpp
lib/tweedledum/: CMakeLists.txt
lib/tweedledum/include/tweedledum/io/: qasm.hpp
